fixed game cards on mobile view

--- a/src/app/content/pages/components/assets-list/assets-list.component.scss
+++ b/src/app/content/pages/components/assets-list/assets-list.component.scss
@@ -32,3 +32,9 @@
         font-size: 20px;
     }
 }
+
+@media (max-width: 767px) {
+  totem-game-card {
+    max-width: unset;
+  }
+}
